--- a/styles.css
+++ b/styles.css
@@ -130,14 +130,45 @@
   }
 
 
-
-
+.btn-wrapper{
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+}
+  .reset-btn{
+    height: 3.25rem;
+    width: 50%;
+  
+    background-color: green;
+  
+    border: none;
+    border-radius: 0.5rem;
+  
+    color: #f1f2f6;
+  
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  
+    margin-top: 3rem;
+    outline: 0;
+  }
+  
+  button:hover {
+    background-color: #4a5dcd;
+  }
+  
+  button:focus {
+    outline: 1.5px solid #4a5dcd;
+  }
 
 
 
 button {
     height: 3.25rem;
-    width: 100%;
+    width: 50%;
   
     background-color: #2f34ab;
   
