--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -24,8 +24,9 @@
   
   body {
     width: 100%;  
-    background-image: url("./img/bg.png");
-    background-size: contain;
+    padding: .2rem;
+   
+  
   
     display: flex;
     align-items: center;
@@ -115,7 +116,7 @@
   }
 
   .wall-wrapper:nth-child(4){
-    margin-bottom: 3rem;
+    margin-bottom: .5rem;
   }
   
 
